// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listing renders correctly 1`] = `
<div>
  <ListingBranch
    data={Array []}
    handleChangePage={[Function]}
    handleChangeRowsPerPage={[Function]}
    handleCheckClick={[Function]}
    handleKeyDown={[Function]}
    handleRequestSort={[Function]}
    handleSelectAllClick={[Function]}
    headers={
      Array [
        Object {
          "id": "name",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Name",
        },
        Object {
          "id": "username",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Username",
        },
        Object {
          "id": "phone",
          "isNumeric": true,
          "isPaddingDisabled": false,
          "isSearchable": true,
          "label": "Phone",
        },
        Object {
          "id": "website",
          "isPaddingDisabled": true,
          "label": "Website",
          "transformContent": [Function],
        },
        Object {
          "id": "company",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Company",
          "transformContent": [Function],
        },
        Object {
          "id": "menu",
          "label": "",
          "transformContent": [Function],
        },
      ]
    }
    isSelected={[Function]}
    onClick={[Function]}
    onFilter={[Function]}
    order="asc"
    orderBy="username"
    page={0}
    rowsPerPage={10}
    selected={Array []}
    title="Christmas Time"
  />
</div>
`;

exports[`Listing renders correctly with Loader 1`] = `
<div>
  <ListingBranch
    data={Array []}
    handleChangePage={[Function]}
    handleChangeRowsPerPage={[Function]}
    handleCheckClick={[Function]}
    handleKeyDown={[Function]}
    handleRequestSort={[Function]}
    handleSelectAllClick={[Function]}
    hasLoader={true}
    headers={
      Array [
        Object {
          "id": "name",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Name",
        },
        Object {
          "id": "username",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Username",
        },
        Object {
          "id": "phone",
          "isNumeric": true,
          "isPaddingDisabled": false,
          "isSearchable": true,
          "label": "Phone",
        },
        Object {
          "id": "website",
          "isPaddingDisabled": true,
          "label": "Website",
          "transformContent": [Function],
        },
        Object {
          "id": "company",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Company",
          "transformContent": [Function],
        },
        Object {
          "id": "menu",
          "label": "",
          "transformContent": [Function],
        },
      ]
    }
    isSelected={[Function]}
    onClick={[Function]}
    onFilter={[Function]}
    order="asc"
    orderBy="username"
    page={0}
    rowsPerPage={10}
    selected={Array []}
    title="Christmas Time"
  />
</div>
`;
